--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       crossorigin
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;700;800&family=Playfair+Display:wght@700&family=Raleway:wght@400;700;900&family=Roboto:ital,wght@0,400;0,700;1,900&family=Urbanist:ital,wght@1,900&display=swap"
       rel="stylesheet"
     />
   </head>
